--- a/MyEstate/appsettings.json
+++ b/MyEstate/appsettings.json
@@ -1,8 +1,8 @@
 {
   "MailSettings": {
-    "Mail": "identityiden067@gmail.com",
+    "Mail": "enterEmail",
     "DisplayName": "MahdiEstate",
-    "Password": "rjqdpujujlkbilfp",
+    "Password": "enterpassword",
     "Host": "smtp.gmail.com",
     "Port": 587
   },
